feat/subscription to main (#3)
* feat: implement plans management with CRUD operations

* feat: add RequireRoles middleware for role-based access control

* feat: add role-based access control with RequireRoles middleware and define user roles

* `feat:` implement database seeding functionality and update migration commands

* feat: add CRUD operations for meal plans and update related API documentation

* feat: add Subscription entity and DTO for subscription management

* feat: update authentication middleware to store email instead of username

* feat: implement Subscription repository with CRUD operations

* refactor: change role variables to constants for improved type safety

* feat: implement Subscription use case with CRUD operations and DTOs

* feat: enhance UpdateSubscription method to include role-based access control

* feat: implement subscription management endpoints, DTOs, and documentation
